--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+
 <html>
   <head>
-	<title>TODO</title>
-	<meta name="description" content="Play-like Net-Art App.">
+	<title>The unicorn</title>
+	<meta name="description" content="The unicorn. A Net-Art App.">
 	<meta name="author" content="Juanma Moreno Sánchez">
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8">
   
