--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="lib/p5.min.js"></script>
 	<script src="lib/p5.play.js"></script>
 	
+	<script src="drop.js"></script>
 	<script src="script.js"></script>
 	
 	<link rel="stylesheet" type="text/css" href="css/style.css">
